--- a/css/adaptive.css
+++ b/css/adaptive.css
@@ -31,7 +31,7 @@
         line-height: 107%;
 
         margin: 0 auto 40px auto;
-        padding-top: 112px;
+        
     }
     .overlay{
         max-width: 1200px;
@@ -42,6 +42,7 @@
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
+        padding-top: 112px;
     }
     @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
@@ -143,6 +144,12 @@
 
 
 @media screen and (min-width:1200px){
+
+    /* global */
+        .section {
+            padding-top: 120px;
+            padding-bottom: 120px;
+        }
     /* header */
     .info-nav {
         display: flex;
@@ -163,7 +170,9 @@
     }
     .hero .hero-title {
         margin-bottom:0 auto 48px auto;
-        padding-top: 188px;
+        
+        font-size: 56px;
+        width: 494px;
     }
 
     .overlay {
@@ -174,6 +183,7 @@
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
+        padding-top: 188px;
     }
 
     @media screen and (min-device-pixel-ratio: 2),
@@ -185,7 +195,7 @@
         }
     }
 
-    /* secont-section */
+    /* second-section */
     .advances-menu{
         display: flex;
         flex-wrap: nowrap;
@@ -216,6 +226,7 @@
         background-repeat: no-repeat;
     }
     .second-section .second-title{
+        text-align: start;
         font-weight: 500;
         font-size: 20px;
         line-height: 1.2;
@@ -229,10 +240,11 @@
     /* third-section */
     .third-section{
         display: block;
+        padding-top: 0;
     }
-        .team-menu .item:not(:last-child) {
-            margin-bottom: 0px;
-        }
+    .team-menu .item:not(:last-child) {
+        margin-bottom: 0px;
+    }
     /* fourth-section */
     
         .team-menu {
@@ -287,9 +299,6 @@
 
 
 
-    .section {
-        padding-top: 120px;
-        padding-bottom: 120px;
-    }
+    
 
 }
